--- a/.gitignore
+++ b/.gitignore
@@ -103,13 +103,19 @@ celerybeat.pid
 
 # Environments
 .env
+.env2
+.env3
+output1.log
+output2.log
+output3.log
+/config/tokens.json
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
-
+/config/tokens.json
 # Spyder project settings
 .spyderproject
 .spyproject
